<resources>
    <string name="app_name">T4 MVP</string>
    <string name="preference_file_key">com.example.noel.videolist.preference_file_key</string>
    <string name="saved_first_time">saved_first_time</string>
    <string name="saved_name">saved_name</string>

    <string name="splash_greeting">Welcome to Tick Tock Tech Talk!\n First, what is your name?</string>
    <string name="splash_button_start">Start</string>
    <string name="splash_hint_name">Name</string>
    <string name="splash_error_name_empty">Please enter your name</string>

    <string name="main_greeting">What are you preparing for?</string>
    <string name="main_actionbar_assessment">Assessment</string>
    <string name="main_actionbar_profile">Profile</string>

    <string name="comics_loading">Loading image&#8230;</string>
    <string name="comics_image_description">Comic image</string>

    <string name="interview_practice_button_replay">Replay</string>
    <string name="interview_practice_button_next">Next</string>
    <string name="interview_practice_button_finish">Finish</string>
    <string name="interview_practice_recording">Recording&#8230;</string>
    <string name="path_interview_question_audio">interview_audio/</string>

    <string name="content_description_cover_art">Cover Art</string>
    <string name="path_cover_art">cover_art/</string>

    <string name="video_actionbar_fullscreen">Fullscreen</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>
