<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/padding_default"
    tools:context=".activity.splash.SplashActivity">

    <TextView
        android:id="@+id/splash_tv_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_default"
        android:lineSpacingExtra="@dimen/text_spacing_splash"
        android:paddingTop="@dimen/padding_default"
        android:text="@string/splash_greeting"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_splash_greeting" />

    <EditText
        android:id="@+id/splash_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_default"
        android:hint="@string/splash_hint_name"
        android:imeOptions="actionDone"
        android:inputType="textPersonName|textCapWords"
        android:textSize="@dimen/text_size_default" />

    <Button
        android:id="@+id/splash_b_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_button_start"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_default" />

</LinearLayout>